--- a/site/views/components/checkbox.pug
+++ b/site/views/components/checkbox.pug
@@ -28,7 +28,7 @@ block contents
                             label Radio Button
                     .footer
                         - var code = '<div class="ga-checkbox {checked}">\n    <input type="checkbox" />\n    <label>Larbel Text</label>\n</div>'
-                        - var code1 = '// use checkbox\nuseWrapper(pram)); // pram(default: document) is wrapper selector'
+                        - var code1 = '<!-- use checkbox -->\n<!-- useWrapper(pram)); // pram(default: document) is wrapper selector -->'
                             pre
                                 code.language-markup
                                     | #{code}
