--- a/site/views/components/form.pug
+++ b/site/views/components/form.pug
@@ -19,7 +19,7 @@ block contents
                                 label Title
                                 input(type="text", placeholder="입력")
                     .footer
-                        -var code = `<div class="ga-form">\n    <div class="field">\n        <-- form contents(label, input ...) -->\n    </div>\n</div>`
+                        -var code = `<div class="ga-form">\n    <div class="field">\n        <!-- form contents(label, input ...) -->\n    </div>\n</div>`
                         pre
                             code.language-markup
                                 | #{code}
@@ -33,7 +33,7 @@ block contents
                                 label Title
                                 input(type="text", placeholder="입력")
                     .footer
-                        -var code = `<div class="ga-form">\n    <div class="header">\n       <div class="title">제목</div>\n    </div>\n    <div class="field">\n        <-- form contents(label, input ...) -->\n    </div>\n</div>`
+                        -var code = `<div class="ga-form">\n    <div class="header">\n       <div class="title">제목</div>\n    </div>\n    <div class="field">\n        <!-- form contents(label, input ...) -->\n    </div>\n</div>`
                             pre
                                 code.language-markup
                                     | #{code}
@@ -47,7 +47,7 @@ block contents
                                 //input(type="text", placeholder="입력")
                                 //input(type="text", placeholder="입력")
                     .footer
-                        -var code = `<div class="ga-form">\n    <div class="field inline">\n        <-- form contents(label, input ...) -->\n    </div>\n</div>`
+                        -var code = `<div class="ga-form">\n    <div class="field inline">\n        <!-- form contents(label, input ...) -->\n    </div>\n</div>`
                             pre
                                 code.language-markup
                                     | #{code}
@@ -61,17 +61,17 @@ block contents
                             .field
                                 input(type="text", placeholder="라벨 없음")
                             .fields.right-side
-                                .field.column.span-3
+                                .field.column.span-3.span-xs-12
                                     label.title 타이틀 1
                                 .field.column
                                     input(type="text", placeholder="입력")
                             .fields.right-side
-                                .field.column.span-3
+                                .field.column.span-3.span-xs-12
                                     label.title 타이틀 2
                                 .field.column
                                     input(type="text", placeholder="입력")
                             .fields.right-side
-                                .field.column.span-3
+                                .field.column.span-3.span-xs-12
                                     label.title 타이틀 3
                                 .field.column
                                     input(type="text", placeholder="입력")
@@ -202,39 +202,39 @@ block contents
                                     | #{code_2_e}
                                     | #{code_1_e}
                 h4.contents-title Fields 지정 분할 구성
-                    .ga-card.attached
-                        .contents-wrapper
-                            .ga-form
-                                .field
-                                    .fields
-                                        .column.span-3
-                                            label span 3
-                                            input(type="text", placeholder="입력")
-                                        .column.span-5
-                                            label span 5
-                                            input(type="text", placeholder="입력")
-                                        .column.span-4
-                                            label span 4
-                                            input(type="text", placeholder="입력")
-                        .footer
-                            - var code_1_s = `<div class="ga-form">`
-                            - var code_2_s = `    <div class="fields">`
-                            - var code_3_1 = `        <div class="field column span-{num}">\n             <input type="text">\n        </div>`
-                            - var code_3_2 = `        <div class="field column span-{num}">\n             <input type="text">\n        </div>`
-                            - var code_e = `        ... ...`
-                            - var code_3_3 = `        <div class="field column span-{num}">\n             <input type="text">\n        </div>`
-                            - var code_2_e = `    </div>`
-                            - var code_1_e = `</div>`
-                                pre
-                                    code.language-markup
-                                        | #{code_1_s}
-                                        | #{code_2_s}
-                                        | #{code_3_1}
-                                        | #{code_3_2}
-                                        | #{code_e}
-                                        | #{code_3_3}
-                                        | #{code_2_e}
-                                        | #{code_1_e}
+                .ga-card.attached
+                    .contents-wrapper
+                        .ga-form
+                            .field
+                                .fields
+                                    .column.span-3
+                                        label span 3
+                                        input(type="text", placeholder="입력")
+                                    .column.span-5
+                                        label span 5
+                                        input(type="text", placeholder="입력")
+                                    .column.span-4
+                                        label span 4
+                                        input(type="text", placeholder="입력")
+                    .footer
+                        - var code_1_s = `<div class="ga-form">`
+                        - var code_2_s = `    <div class="fields">`
+                        - var code_3_1 = `        <div class="field column span-{num}">\n             <input type="text">\n        </div>`
+                        - var code_3_2 = `        <div class="field column span-{num}">\n             <input type="text">\n        </div>`
+                        - var code_e = `        ... ...`
+                        - var code_3_3 = `        <div class="field column span-{num}">\n             <input type="text">\n        </div>`
+                        - var code_2_e = `    </div>`
+                        - var code_1_e = `</div>`
+                            pre
+                                code.language-markup
+                                    | #{code_1_s}
+                                    | #{code_2_s}
+                                    | #{code_3_1}
+                                    | #{code_3_2}
+                                    | #{code_e}
+                                    | #{code_3_3}
+                                    | #{code_2_e}
+                                    | #{code_1_e}
                 h4.contents-title Text Area
                 .ga-card.attached
                     .contents-wrapper
@@ -250,9 +250,9 @@ block contents
                         - var code1 = `<div class="ga-form">\n    <div class="field short">\n        <label>label</label>\n        <textarea />\n    </div>\n</div>`
                             pre
                                 code.language-markup
-                                    | // Normal
+                                    | #{`<!-- Normal -->`}
                                     | #{code}
-                                    | //Short
+                                    |  #{`<!-- Short -->`}
                                     | #{code1}
                 h4.contents-title Check Box
                 .ga-card.attached
@@ -265,7 +265,7 @@ block contents
                                     input(type="checkbox")
                                     label 체크박스를 표시합니다.
                     .footer
-                        - var code = `<div class="ga-form">\n    <-- something form element field -->\n    <div class="field">\n        <div class="ga-checkbox">\n          <input type="checkbox" />\n          <label>label</label>\n        </div>\n    </div>\n</div>`
+                        - var code = `<div class="ga-form">\n    <!-- something form element field -->\n    <div class="field">\n        <div class="ga-checkbox">\n          <input type="checkbox" />\n          <label>label</label>\n        </div>\n    </div>\n</div>`
                             pre
                                 code.language-markup
                                     | #{code}
@@ -304,7 +304,7 @@ block contents
                                             input(type="radio", name="traffic")
                                             label 3번. 아무것도 하지 않는다.
                     .footer
-                        - var code = `<div class="ga-form">\n    <-- something form element field -->\n    <div class="field">\n        <div class="ga-checkbox radio">\n          <input type="radio" name="radios" />\n          <label>label</label>\n        </div>\n    </div>\n</div>`
+                        - var code = `<div class="ga-form">\n    <!-- something form element field -->\n    <div class="field">\n        <div class="ga-checkbox radio">\n          <input type="radio" name="radios" />\n          <label>label</label>\n        </div>\n    </div>\n</div>`
                             pre
                                 code.language-markup
                                     | #{code}
@@ -322,74 +322,8 @@ block contents
                                                 option(value=`${col}`)= `option${col}`
                                     i.arrow.icon.xi-angle-down
                     .footer
-                        - var code = `<div class="ga-form">\n    <-- something form element field -->\n    <div class="field">\n        <div class="ga-select-box">\n          <select />\n        </div>\n    </div>\n</div>`
+                        - var code = `<div class="ga-form">\n    <!-- something form element field -->\n    <div class="field">\n        <div class="ga-select-box">\n          <select />\n        </div>\n    </div>\n</div>`
                             pre
                                 code.language-markup
                                     | #{code}
-                //h4.contents-title Select Box(multiple)
-                //.contents-wrapper
-                //h4.contents-title Required
-                //.contents-wrapper
-                //h4.contents-title Switch
-                //.contents-wrapper
-                //- h4.contents-title Template
-                //- .ga-card.attached
-                    .contents-wrapper
-                        .ga-form
-                            .fields.divide.half
-                                .field.column
-                                    label 구분
-                                    .ga-select-box
-                                        select
-                                            each col in ['', 1, 2, 3, 4, 5, 6]
-                                                if col == ''
-                                                    option(default, value=`${col}`)= '구분 선택'
-                                                else
-                                                    option(value=`${col}`)= `option${col}`
-                                        i.arrow.icon.xi-angle-down
-                                .field.column
-                                    label 운영체제
-                                    .ga-select-box
-                                        select
-                                            each col in ['', 1, 2, 3, 4, 5, 6]
-                                                if col == ''
-                                                    option(default, value=`${col}`)= 'OS 이미지'
-                                                else
-                                                    option(value=`${col}`)= `option${col}`
-                                        i.arrow.icon.xi-angle-down
-                                .field.column
-                                    .fields.divide-3
-                                        .field.column
-                                            label CPU
-                                            .ga-select-box
-                                                select
-                                                    each col in ['', 1, 2, 3, 4, 5, 6]
-                                                        if col == ''
-                                                            option(default, value=`${col}`)= 'CPU'
-                                                        else
-                                                            option(value=`${col}`)= `option${col}`
-                                                i.arrow.icon.xi-angle-down
-                                        .field.column
-                                            label 메모리
-                                            .ga-select-box
-                                                select
-                                                    each col in ['', 1, 2, 3, 4, 5, 6]
-                                                        if col == ''
-                                                            option(default, value=`${col}`)= '메모리'
-                                                        else
-                                                            option(value=`${col}`)= `option${col}`
-                                                i.arrow.icon.xi-angle-down
-                                        .field.column
-                                            label 루트볼륨
-                                            .ga-select-box
-                                                select
-                                                    each col in ['', 1, 2, 3, 4, 5, 6]
-                                                        if col == ''
-                                                            option(default, value=`${col}`)= '루트볼륨'
-                                                        else
-                                                            option(value=`${col}`)= `option${col}`
-                                                i.arrow.icon.xi-angle-down
-                                .field.column
-                                    label 서버
-                                    .ga-input.unit(data-unit='대')
-                                        input.align-right(type="text", placeholder="0")
+                
