--- a/site/views/components/toast.pug
+++ b/site/views/components/toast.pug
@@ -28,22 +28,34 @@ block contents
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-icon
-                                i.xi-check-circle-o
+                                i.xi-check-circle
                             .toast-contents success
                         .toast.ga-danger
                             .toast-icon
-                                i.xi-error-o
+                                i.xi-error
                             .toast-contents danger
                         .toast.ga-deepblue
                             .toast-icon
-                                i.xi-info-o
+                                i.xi-info
                             .toast-contents message
+                        .toast.ga-info
+                            .toast-icon
+                                i.xi-info
+                            .toast-contents Info
+                        .toast.ga-attention
+                            .toast-icon
+                                i.xi-info
+                            .toast-contents Attention
+                        .toast.ga-importance
+                            .toast-icon
+                                i.xi-info
+                            .toast-contents Importance
                 h4.contents-title 동그랗게
                 .ga-card.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success.round
                             .toast-icon
-                                i.xi-check-circle-o
+                                i.xi-check-circle
                             .toast-contents success
                             .toast-close
                                 i.xi-close
@@ -52,31 +64,31 @@ block contents
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-icon
-                                i.xi-check-circle-o
-                            .toast-contents success
+                                i.xi-check-circle
+                            .toast-contents base type
                             .toast-close
                                 i.xi-close
                         .toast
                             .toast-icon.ga-success
-                                i.xi-check-circle-o
-                            .toast-contents success
+                                i.xi-check-circle
+                            .toast-contents Icon-bg type
                             .toast-close
                                 i.xi-close
                         .toast.border-left
-                            .toast-contents.ga-success-border success
+                            .toast-contents.ga-success-border Liune type
                             .toast-close
                                 i.xi-close
                         .toast
                             .toast-icon.ga-success-text
-                                i.xi-check-circle-o
-                            .toast-contents.ga-success-border success
+                                i.xi-check-circle
+                            .toast-contents.ga-success-border Icon type
                             .toast-close
                                 i.xi-close
                         .toast.ga-success-light
                             .toast-icon
-                                i.xi-check-circle-o
+                                i.xi-check-circle
                             .toast-contents
-                                span.bolder success
+                                span.bolder Light type
                             .toast-close
                                 i.xi-close
                 h4.contents-title 테스트
