--- a/site/views/lnb.pug
+++ b/site/views/lnb.pug
@@ -4,7 +4,7 @@
 
 .ui-list
     .menu-header 
-        a(href=`${path}`).bold Frog UI
+        //- a(href=`${path}`).bold Frog UI
     .menu-contents
         .ga-list.selection
             each item in menuItems
