--- a/site/views/components/panel.pug
+++ b/site/views/components/panel.pug
@@ -12,78 +12,91 @@ block contents
                     p Expandable/collapsible side or content panels.
             .section-contents
                 h4.contents-title 기본
-                .contents-wrapper
-                    .ga-panel
-                        .panel-header
-                            .title 제목
-                        .panel-content
-                            .content-wrapper CONTENT
-                                p
-                                    | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
-                                    | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
-                                    | eius est facere pariatur voluptas!
-                                p
-                                    | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
-                                    | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
-                                    | eius est facere pariatur voluptas!
+                .ga-card.attached
+                    .contents-wrapper
+                        .ga-panel
+                            .panel-header
+                                .title 제목
+                            .panel-content
+                                .content-wrapper CONTENT
+                                    p
+                                        | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                        | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
+                                        | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
+                                        | eius est facere pariatur voluptas!
+                                    p
+                                        | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                        | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
+                                        | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
+                                        | eius est facere pariatur voluptas!
+                    .footer
+                        .code-wrapper
+                            - var code = `\n<div class=\"ga-panel\">\n    <div class=\"panel-header\"> ... </div>\n    <div class=\"panel-contents\"> ... </div>\n</div>\n`
+                            pre
+                                code.language-markup= code
             .section-contents
-                h4.contents-title 기본
-                .contents-wrapper
-                    .ga-panel.collapse
-                        .panel-header
-                            .title 제목
-                            button.panel-toggle-btn.ga-button.icon.outline
-                                i.xi-caret-up
-                        .panel-content
-                            .content-wrapper
-                                p
-                                    | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
-                                    | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
-                                    | eius est facere pariatur voluptas!
-                                p
-                                    | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
-                                    | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
-                                    | eius est facere pariatur voluptas!
+                h4.contents-title Collapse
+                .ga-card.attached
+                    .contents-wrapper
+                        .ga-panel.collapse
+                            .panel-header
+                                .title 제목
+                                button.panel-toggle-btn.ga-button.icon.outline
+                                    i.xi-caret-up
+                            .panel-content
+                                .content-wrapper
+                                    p
+                                        | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                        | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
+                                        | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
+                                        | eius est facere pariatur voluptas!
+                                    p
+                                        | Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                        | Commodi consequuntur corporis expedita fuga, incidunt obcaecati qui,
+                                        | quis, rem reprehenderit rerum sed sit. Distinctio doloremque dolorum
+                                        | eius est facere pariatur voluptas!
+                    .footer
+                        .code-wrapper
+                            - var code = `\n<div class=\"ga-panel collapse\">\n    <div class=\"panel-header\"> ... </div>\n    <div class=\"panel-contents\"> ... </div>\n</div>\n`
+                            pre
+                                code.language-markup= code
             .section-contents
-                h4.contents-title 기본
-                .contents-wrapper
-                    .ga-panel.open
-                        .panel-header
-                            .title 제목
-                            button.panel-toggle-btn.ga-button.icon.outline
-                                i.xi-angle-up
-                        .panel-content
-                            .content-wrapper
-                                .content-head
-                                    | Head Area
-                                .content-body
-                                    - var rows = [{name: '김아무개', age: 11, job: '학생'},{name: '이아무개', age: 17, job: '대학생'},{name: '박아무개', age: 31, job: '대학원생'},]
-                                    table.ga-table
-                                        thead
-                                            tr.align-center
-                                                th 이름
-                                                th.align-right 나이
-                                                th 직업
-                                        tbody
-                                            each row in rows
-                                                tr
-                                                    td= `${row.name}`
-                                                    td.align-right= `${row.age}`
-                                                    td= `${row.job}`
-                                .content-foot
-                                    .ga-pagination.number.align-center.small
-                                        - var items = [2, 3, 4, 5]
-                                        .pagination-nav
-                                            i.xi-angle-left
-                                        .pagination-page-wrapper
-                                            .pagination-num.active 1
-                                            each item in items
-                                                .pagination-num=`${item}`
-                                        .pagination-nav
-                                            i.xi-angle-right
+                h4.contents-title Example
+                .ga-card.attached
+                    .contents-wrapper
+                        .ga-panel.open
+                            .panel-header
+                                .title 제목
+                                button.panel-toggle-btn.ga-button.icon.outline
+                                    i.xi-angle-up
+                            .panel-content
+                                .content-wrapper
+                                    .content-head
+                                        | Head Area
+                                    .content-body
+                                        - var rows = [{name: '김아무개', age: 11, job: '학생'},{name: '이아무개', age: 17, job: '대학생'},{name: '박아무개', age: 31, job: '대학원생'},]
+                                        table.ga-table
+                                            thead
+                                                tr.align-center
+                                                    th 이름
+                                                    th.align-right 나이
+                                                    th 직업
+                                            tbody
+                                                each row in rows
+                                                    tr
+                                                        td= `${row.name}`
+                                                        td.align-right= `${row.age}`
+                                                        td= `${row.job}`
+                                    .content-foot
+                                        .ga-pagination.number.align-center.small
+                                            - var items = [2, 3, 4, 5]
+                                            .pagination-nav
+                                                i.xi-angle-left
+                                            .pagination-page-wrapper
+                                                .pagination-num.active 1
+                                                each item in items
+                                                    .pagination-num=`${item}`
+                                            .pagination-nav
+                                                i.xi-angle-right
 block module 
     script(src="/js/panel.js")
