--- a/src/definitions/components/tabs.scss
+++ b/src/definitions/components/tabs.scss
@@ -3,7 +3,9 @@
   position: relative;
   width: 100%;
   .tab-menu {
+    display: flex;
     .tab-item {
+      flex-shrink: 0;
       cursor: pointer;
       display: inline-block;
       padding: 4px 12px;
@@ -18,6 +20,7 @@
     }
   }
   &.vertical .tab-menu {
+    flex-direction: column;
     .tab-item {
       display: block;
     }
