--- a/src/definitions/components/toast.scss
+++ b/src/definitions/components/toast.scss
@@ -56,7 +56,8 @@
   .toast {
     display: flex;
     justify-content: space-between;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     margin: 5px;
     //opacity: .95;
     border-radius: $baseBorderRadius;
