--- a/src/definitions/components/card.scss
+++ b/src/definitions/components/card.scss
@@ -3,7 +3,7 @@
   background-color: $cardBackgroundColor;
   box-shadow: $cardBoxShadow;
   margin: 20px 0;
-  border-radius: $baseBorderRadius;
+  border-radius: $cardBorderRadius;
   > .title {
     // font-family: 'Spoqa Han Sans Bold';
     font-size: 2em;
