--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -11,6 +11,7 @@ header.gnb {
   display: flex;
   justify-content: space-between;
   background-color: var(--bgc);
+  border-bottom: 1px solid var(--brd);
   z-index: 999;
   .logo {
     position: absolute;
